--- a/frappe/public/less/desk.less
+++ b/frappe/public/less/desk.less
@@ -1046,6 +1046,9 @@ input[type="checkbox"] {
 			border: none;
 		}
 	}
+	.add-more {
+		margin-bottom: 30px;
+	}
 	.lead {
 		margin-top: 20px;
 	}
