--- a/frappe/public/js/frappe/views/reports/print_tree.html
+++ b/frappe/public/js/frappe/views/reports/print_tree.html
@@ -9,107 +9,56 @@
     <title>{{ title }}</title>
     <link href="{{ base_url }}/assets/frappe/css/bootstrap.css" rel="stylesheet">
 	<link type="text/css" rel="stylesheet"
-        href="{{ base_url }}/assets/frappe/css/font-awesome.css">
+		href="{{ base_url }}/assets/frappe/css/font-awesome.css">
+	<link rel="stylesheet" type="text/css" href="{{ base_url }}/assets/frappe/css/tree.css">	
 	<style>
 		{{ print_css }}
 	</style>
 	<style>
-		#header-html {
-			clear: both;
-			display: block;
-			width: 100%;
-			padding: 20px 0;
-			border-bottom: 1px solid;
-			margin-bottom: 20px;
+		.tree.opened::before, 
+		.tree-node.opened::before, 
+		.tree:last-child::after, 
+		.tree-node:last-child::after {
+			z-index: 1;
+			border-left: 1px solid #d1d8dd;
+			background: none;
 		}
-		.tree {
-			padding: 15px;
-		}
-		.tree li {
-			list-style: none;
-			margin: 2px 0px;
-		}
-		ul.tree-children {
-			padding-left: 20px;
-		}
+		.tree a,
 		.tree-link {
-			display: inline-block;
-			padding: 1px;
-		}
-		.tree-link.active i {
-			color: #5e64ff !important;
-		}
-		.tree-hover {
-			background-color: #F7FAFC;
-			min-height: 20px;
-			border: 1px solid #d1d8dd;
-		}
-		.tree-node-toolbar {
-			display: inline-block;
-			padding: 0px 5px;
-			margin-left: 15px;
-			margin-bottom: -4px;
-			margin-top: -8px;
-		}
-		.tree,
-		.tree-node {
-			position: relative;
-		}
-		.tree.opened::before,
-		.tree-node.opened::before,
-		.tree:last-child::after,
-		.tree-node:last-child::after {
-			content: "";
-			position: absolute;
-			top: 16px;
-			left: 8px;
-			height: calc(100% - 26px);
-			width: 1px;
-			background: #d1d8dd;
-			z-index: 1;
-		}
-		.tree:last-child::after,
-		.tree-node:last-child::after {
-			top: 11px;
-			left: -13px;
-			height: calc(100% - 15px);
-			width: 3px;
-			background: #fff;
-		}
-		.tree.opened > .tree-children > .tree-node > .tree-link::before,
-		.tree-node.opened > .tree-children > .tree-node > .tree-link::before {
-			content: "";
-			position: absolute;
-			width: 15px;
-			height: 1px;
-			top: 10px;
-			left: -11px;
-			z-index: 1;
-			background: #d1d8dd;
-		}
-		.tree.opened::before {
-			left: 23px;
-			top: 33px;
-			height: calc(100% - 67px);
-		}
-		.tree-link.active ~ .balance-area {
-			color: #36414C !important;
-		}
-		i.octicon.octicon-primitive-dot.text-extra-muted {
-			width: 8px;
-			height: 8px;
-			border-radius: 50%;
-			display: inline-block;
-			background: #c3c6c8;
-			position: relative;
-			z-index: 1;
-			margin-top: 5px;
-		}
-		a.tree-label {
 			text-decoration: none;
 			cursor: default;
 		}
+		.tree.opened > .tree-children > .tree-node > .tree-link::before, 
+		.tree-node.opened > .tree-children > .tree-node > .tree-link::before {
+			border-top: 1px solid #d1d8dd;
+			z-index: 1;
+			background: none;
+		}
+		i.fa.fa-fw.fa-folder {
+			z-index: 2;
+			position: relative;
+		}
+		.tree:last-child::after, .tree-node:last-child::after {
+			display: none;
+		}
+		.tree-node-toolbar {
+			display: none;
+		}
+		i.octicon.octicon-primitive-dot.text-extra-muted {
+			width: 7px;
+			height: 7px;
+			border-radius: 50%;
+			background: #d1d8dd;
+			display: inline-block;
+			position: relative;
+			z-index: 2;
+		}
 
+		@media (max-width: 767px) {
+			ul.tree-children {
+				padding-left: 20px;
+			}
+		}
 	</style>
   </head>
   <body>
