--- a/frappe/public/less/desk.less
+++ b/frappe/public/less/desk.less
@@ -343,6 +343,7 @@ a.progress-small {
 	}
 
 	.progress-bar {
+		transition: unset;
 		background-color: #98d85b;
 	}
 }
@@ -360,6 +361,7 @@ li.user-progress {
 	}
 
 	.progress-bar {
+		transition: unset;
 		background-color: #98d85b;
 	}
 }
@@ -1191,6 +1193,7 @@ input[type="checkbox"] {
 		margin-bottom: 0px;
 	}
 	.progress-bar {
+		transition: unset;
 		background-color: #98d85b;
 	}
 }
