--- a/frappe/public/css/desk.css
+++ b/frappe/public/css/desk.css
@@ -1137,89 +1137,16 @@ input[type="checkbox"]:checked:before {
   color: #fff;
   border-color: #b1bdca;
 }
-.cards-container .card-container {
-  background-color: #fff;
-  margin: 5px 7px;
-  border-radius: 3px;
-  display: flex;
-  position: relative;
-}
-.cards-container .card-container.done .title {
-  color: #8D99A6;
-}
-.cards-container .card-container:not(:last-child) {
-  border-bottom: 1px solid #e5e5e5;
-}
-.cards-container .card-container.single_action {
-  cursor: pointer;
-}
-.cards-container .card-container.single_action .image-overlay {
-  opacity: 0.1;
-}
-.cards-container .title a {
-  margin-top: 0px;
-}
-.cards-container .content {
-  font-size: 12px;
-}
-.cards-container .img-container {
-  position: relative;
-}
-.cards-container .img-container .image-overlay {
-  position: absolute;
-  top: 0;
-  background-color: #fff;
-  width: 100%;
-  height: 100%;
-  opacity: 0;
-}
-.cards-container .img-container .fa-play-circle {
-  position: absolute;
-  font-size: 42px;
-  left: calc(33%);
-  top: 25%;
-  color: #fff;
-  opacity: 0.8;
-  text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.35);
-}
-.cards-container img {
-  width: 195px;
-}
-.cards-container img.clip {
-  margin: -15px 0px;
-  clip-path: inset(15px 0px 15px 0px);
-}
-.cards-container .content-container {
-  padding: 10px;
-  width: 92%;
-  position: relative;
-}
-.cards-container .action-area {
+.user-progress-dialog .slides-progress {
   margin-top: 15px;
-  font-size: 12px;
 }
-.cards-container .action-area button:not(:first-child),
-.cards-container .action-area a:not(:first-child) {
-  margin-left: 15px;
+.user-progress-dialog .done-state .check-container {
+  font-size: 64px;
+  margin: 40px;
 }
-.cards-container .check {
-  position: absolute;
-  font-size: 24px;
-  right: 10px;
-  top: calc(40%);
+.user-progress-dialog .done-state .title {
+  font-weight: normal;
 }
-.user-progress-dialog .modal-title {
-  display: inline-block;
-}
-.user-progress-dialog .progress-chart {
-  display: inline-block;
-  margin-left: 15px;
-  width: 60px;
-}
-.user-progress-dialog .progress {
-  margin-bottom: 0px;
-}
-.user-progress-dialog .progress-bar {
-  transition: unset;
-  background-color: #98d85b;
+.user-progress-dialog .done-state .help-links a {
+  margin: 0px 10px;
 }
