--- a/frappe/public/less/desk.less
+++ b/frappe/public/less/desk.less
@@ -1088,115 +1088,28 @@ input[type="checkbox"] {
 	}
 }
 
-// Action Cards
-.cards-container {
-	.card-container {
-		background-color: #fff;
-		margin: 5px 7px;
-		border-radius: 3px;
-		display: flex;
-		position: relative;
-
-		&.done {
-			// background-color: #fafbfc;
-
-			.title {
-				color: #8D99A6;
-			}
-		}
-
-		&:not(:last-child) {
-			border-bottom: 1px solid #e5e5e5;
-		}
-
-		&.single_action {
-			cursor: pointer;
-			.image-overlay {
-				opacity: 0.1;
-			}
-			// .fa-play-circle{
-			// 	opacity: 1;
-			// }
-		}
-	}
-
-	.title a{
-		margin-top: 0px;
-	}
-
-	.content {
-		font-size: 12px;
-	}
-	.img-container {
-		position: relative;
-
-		.image-overlay {
-			position: absolute;
-			top: 0;
-			background-color: #fff;
-			width: 100%;
-			height: 100%;
-			opacity: 0;
-		}
-
-		.fa-play-circle {
-			position: absolute;
-			font-size: 42px;
-			left: calc(50% - 17px);
-			top: 25%;
-			color: #fff;
-			opacity: 0.8;
-			text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.35);
-		}
-	}
-
-	img {
-		width: 195px;
-
-		&.clip {
-			margin: -15px 0px;
-			clip-path: inset(15px 0px 15px 0px);
-		}
-	}
-
-	.content-container {
-		padding: 10px;
-		width: 92%;
-		position: relative;
-	}
-
-	.action-area {
-		margin-top: 15px;
-		font-size: 12px;
-
-		button:not(:first-child), a:not(:first-child) {
-			margin-left: 15px;
-		}
-	}
-
-	.check {
-		position: absolute;
-		font-size: 24px;
-		right: 10px;
-		top: calc(50% - 10px);
-	}
-}
-
 // User Progress Dialog
 .user-progress-dialog {
-	.modal-title {
-		display: inline-block;
+	.slides-progress {
+		margin-top: 15px;
 	}
-	.progress-chart {
-		display: inline-block;
-		margin-left: 15px;
-		width: 60px;
+
+	.done-state {
+		.check-container {
+			font-size: 64px;
+			margin: 40px;
+		}
+
+		.title {
+			font-weight: normal;
+		}
+
+		.help-links {
+
+			a {
+				margin: 0px 10px;
+			}
+		}
 	}
-	.progress {
-		margin-bottom: 0px;
-	}
-	.progress-bar {
-		transition: unset;
-		background-color: #98d85b;
-	}
+
 }
