--- a/frappe/public/less/report.less
+++ b/frappe/public/less/report.less
@@ -70,16 +70,13 @@
 
 // datatable
 .data-table  {
-	.frappe-control {
-		margin: 0;
-		padding: 0;
+	.edit-popup {
+		.frappe-control {
+			padding: 0;
 
-		.form-group {
-			margin: 0;
-		}
-
-		input {
-			border: none;
+			.form-group {
+				margin: 0;
+			}
 		}
 	}
 }
