--- a/frappe/public/css/datatable.css
+++ b/frappe/public/css/datatable.css
@@ -29,4 +29,24 @@
 }
 .data-table-col .content {
   padding: 8px;
+  border: 1px solid white;
+}
+.data-table-col.selected .content {
+  border: 1px solid #5E64FF;
+}
+.edit-popup {
+  position: absolute;
+  border: 1px solid #d1d8dd;
+  background: white;
+  border-radius: 4px;
+  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
+  padding: 12px;
+}
+.noselect {
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
