--- a/frappe/public/less/page.less
+++ b/frappe/public/less/page.less
@@ -334,14 +334,18 @@ select.input-sm {
 	}
 }
 
-.setup-state {
+.page-card-container, .setup-state {
 	background-color: #f5f7fa;
+}
+
+.page-card-container {
+	padding: 70px;
 }
 
 .page-card {
 	max-width: 360px;
+	margin: 70px auto;
     padding: 15px;
-    margin: 70px auto;
     border: 1px solid #d1d8dd;
     border-radius: 4px;
     background-color: #fff;
@@ -352,6 +356,10 @@ select.input-sm {
 		margin: -15px;
 		margin-bottom: 15px;
 		border-bottom: 1px solid #d1d8dd;
+	}
+
+	.btn {
+		margin-top: 30px;
 	}
 }
 
