--- a/frappe/public/css/page.css
+++ b/frappe/public/css/page.css
@@ -156,14 +156,16 @@ select.input-sm {
 #page-setup-wizard {
   margin-top: 30px;
 }
-.setup-wizard-slide {
-  padding-left: 0px;
-  padding-right: 0px;
-}
 @media (min-width: 768px) {
   .setup-wizard-slide {
     max-width: 500px;
   }
+}
+.setup-wizard-slide {
+  margin: 60px auto;
+  padding: 10px 50px;
+  border: 1px solid #d1d8dd;
+  box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.1);
 }
 .setup-wizard-slide .slides-progress {
   margin-top: 20px;
@@ -189,19 +191,17 @@ select.input-sm {
 .setup-wizard-slide .form-control.bold {
   background-color: #fff;
 }
-.setup-wizard-slide.with-form {
-  margin: 40px auto;
-  padding: 10px 50px;
-  border: 1px solid #d1d8dd;
-  box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.1);
-}
 .setup-wizard-slide .add-more {
   margin: 0px;
 }
 .setup-wizard-slide .footer {
   padding: 30px 7px;
 }
-.setup-wizard-slide a.next-btn.disabled,
+.setup-wizard-slide a.next-btn.disabled {
+  background-color: #b1bdca;
+  color: #fff;
+  border-color: #b1bdca;
+}
 .setup-wizard-slide a.complete-btn.disabled {
   background-color: #b1bdca;
   color: #fff;
@@ -223,20 +223,18 @@ select.input-sm {
 .setup-wizard-slide .frappe-control[data-fieldtype="Attach Image"] {
   width: 140px;
   height: 180px;
-  /*depends on presence of heading*/
   margin-top: 20px;
 }
-.setup-wizard-slide .frappe-control[data-fieldtype="Attach Image"] .form-group,
+.setup-wizard-slide .frappe-control[data-fieldtype="Attach Image"] .form-group {
+  display: none;
+}
 .setup-wizard-slide .frappe-control[data-fieldtype="Attach Image"] .clearfix {
   display: none;
 }
-.setup-wizard-slide .missing-image,
-.setup-wizard-slide .attach-image-display {
+.setup-wizard-slide .missing-image {
   display: block;
   position: relative;
   border-radius: 4px;
-}
-.setup-wizard-slide .missing-image {
   border: 1px solid #d1d8dd;
   border-radius: 6px;
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
@@ -246,6 +244,11 @@ select.input-sm {
   top: 50%;
   transform: translate(0px, -50%);
   -webkit-transform: translate(0px, -50%);
+}
+.setup-wizard-slide .attach-image-display {
+  display: block;
+  position: relative;
+  border-radius: 4px;
 }
 .setup-wizard-slide .img-container {
   height: 100%;
