--- a/frappe/public/less/graphs.less
+++ b/frappe/public/less/graphs.less
@@ -44,16 +44,12 @@
 		}
 	}
 
-	.bar-graph, .line-graph {
+	.axis, .chart-label {
+		font-size: 10px;
+		fill: #959ba1;
 
-		// baselines
-		.axis {
-			font-size: 10px;
-			fill: #6a737d;
-
-			line {
-				stroke: rgba(27,31,35,0.1);
-			}
+		line {
+			stroke: rgba(27,31,35,0.1);
 		}
 	}
 
