webview for the newsletter

--- a/frappe/email/doctype/newsletter/templates/newsletter_row.html
+++ b/frappe/email/doctype/newsletter/templates/newsletter_row.html
@@ -1,5 +1,5 @@
 <div class="web-list-item transaction-list-item">
-	<a href = "/newsletters/{{doc.name}}/">
+	<a href = "{{ route }}/">
 		<div class="row">
 			<div class="col-sm-8 text-left bold">
 				{{ doc.subject }}
