[minor] translate field label for auto email reports

--- a/frappe/templates/emails/auto_email_report.html
+++ b/frappe/templates/emails/auto_email_report.html
@@ -20,7 +20,7 @@
 		<tr>
 			{% for col in columns %}
 			<th {{- get_alignment(col) }}>
-				{{- col.label -}}
+				{{- _(col.label) -}}
 			</th>
 			{% endfor %}
 		</tr>
