--- a/frappe/public/less/form.less
+++ b/frappe/public/less/form.less
@@ -136,6 +136,11 @@
 
 .form-heatmap {
 
+	.heatmap {
+		display: flex;
+		justify-content: center;
+	}
+
 	.heatmap-message {
 		margin-top: 10px;
 	}
