--- a/frappe/public/js/frappe/form/templates/form_dashboard.html
+++ b/frappe/public/js/frappe/form/templates/form_dashboard.html
@@ -2,7 +2,7 @@
 	<div class="progress-area hidden form-dashboard-section">
 	</div>
 	<div class="form-heatmap hidden form-dashboard-section">
-		<div id="heatmap-{{ frappe.model.scrub(frm.doctype) }}"></div>
+		<div id="heatmap-{{ frappe.model.scrub(frm.doctype) }}" class="heatmap"></div>
 		<div class="text-muted small heatmap-message hidden"></div>
 	</div>
 	<div class="form-graph form-dashboard-section hidden"></div>
