Email notification on docshare
Send an email notification when a doc is shared
New notify_by_email colum added in docshare
Checkbox added in set_sharing.html

--- a/frappe/public/js/frappe/form/templates/set_sharing.html
+++ b/frappe/public/js/frappe/form/templates/set_sharing.html
@@ -51,5 +51,7 @@
     <p>
         <button class="btn btn-primary btn-add-share">{%= __("Add") %}</button>
     </p>
+    <input type="checkbox" class="add-share-notify" name="notify" checked> {%= __("Notify via email")%}
+
     {% } %}
 </div>
