[minor] reverted code control's background color to white

--- a/frappe/public/css/form.css
+++ b/frappe/public/css/form.css
@@ -601,8 +601,7 @@ select.form-control {
 .control-code.bold {
   height: 400px;
   font-family: Monaco, "Courier New", monospace;
-  background-color: black;
-  color: #fffce7;
+  color: black;
   font-size: 12px;
   line-height: 1.7em;
   border: none;
