--- a/frappe/public/less/form.less
+++ b/frappe/public/less/form.less
@@ -749,8 +749,7 @@ select.form-control {
 .control-code, .control-code.bold {
 	height: 400px;
 	font-family: Monaco, "Courier New", monospace;
-	background-color: black;
-	color: @light-yellow;
+	color: black;
 	font-size: 12px;
 	line-height: 1.7em;
 	border: none;
