[minor] get_empty_state fixes

--- a/frappe/public/less/page.less
+++ b/frappe/public/less/page.less
@@ -339,6 +339,10 @@ select.input-sm {
 	background-color: #f5f7fa;
 }
 
+.layout-main .page-card-container {
+	background-color: #fff;
+}
+
 .page-card-container {
 	padding: 70px;
 }
