--- a/frappe/public/css/form.css
+++ b/frappe/public/css/form.css
@@ -601,10 +601,9 @@ select.form-control {
 .control-code.bold {
   height: 400px;
   font-family: Monaco, "Courier New", monospace;
-  color: black;
+  color: #36414C;
   font-size: 12px;
   line-height: 1.7em;
-  border: none;
 }
 .delivery-status-indicator {
   display: inline-block;
