--- a/frappe/public/less/form.less
+++ b/frappe/public/less/form.less
@@ -749,10 +749,9 @@ select.form-control {
 .control-code, .control-code.bold {
 	height: 400px;
 	font-family: Monaco, "Courier New", monospace;
-	color: black;
+	color: @text-color;
 	font-size: 12px;
 	line-height: 1.7em;
-	border: none;
 }
 
 .delivery-status-indicator {
