--- a/frappe/public/css/page.css
+++ b/frappe/public/css/page.css
@@ -281,7 +281,7 @@ select.input-sm {
 .setup-state {
   background-color: #f5f7fa;
 }
-.layout-main .page-card-container {
+.page-container .page-card-container {
   background-color: #fff;
 }
 .page-card-container {
