--- a/frappe/public/less/desktop.less
+++ b/frappe/public/less/desktop.less
@@ -70,7 +70,7 @@ body[data-route=""] .navbar-default, body[data-route="desktop"] .navbar-default 
 }
 
 .app-icon path {
-	fill: @icon-color;
+	// fill: @icon-color;
 	transition: 0.2s;
 	-webkit-transition: 0.2s;
 }
@@ -94,7 +94,7 @@ body[data-route=""] .navbar-default, body[data-route="desktop"] .navbar-default 
 }
 
 .app-icon:hover path {
-	fill: @icon-hover;
+	// fill: @icon-hover;
 }
 
 .app-icon:hover i,
