--- a/frappe/public/less/page.less
+++ b/frappe/public/less/page.less
@@ -339,7 +339,7 @@ select.input-sm {
 	background-color: #f5f7fa;
 }
 
-.layout-main .page-card-container {
+.page-container .page-card-container {
 	background-color: #fff;
 }
 
