--- a/frappe/public/js/frappe/form/templates/grid_body.html
+++ b/frappe/public/js/frappe/form/templates/grid_body.html
@@ -7,7 +7,9 @@
 			<div class="small form-clickable-section grid-footer">
                 <div class="row">
                     <div class="col-sm-6 grid-buttons">
-        				<button type="reset" class="btn btn-xs btn-danger grid-remove-rows hide">
+        				<button type="reset"
+							class="btn btn-xs btn-danger grid-remove-rows hide"
+							style="margin-right: 4px;">
                             {%= __("Delete") %}</button>
         				<button type="reset"
 							class="grid-add-multiple-rows btn btn-xs btn-default hide"
