--- a/frappe/public/less/desk.less
+++ b/frappe/public/less/desk.less
@@ -195,9 +195,9 @@ textarea.form-control {
 	width: 100%;
 
 	&> ul {
-		z-index: 1041;
+		z-index: 1041 !important;
 		transition: none;
-		background: #fff;
+		background-color: #fff;
 		max-height: 200px;
 		overflow-y: auto;
 		overflow-x: hidden;
