--- a/frappe/public/less/desk.less
+++ b/frappe/public/less/desk.less
@@ -350,7 +350,7 @@ a.progress-small {
 
 li.user-progress {
 	.progress-chart {
-		width: 60px;
+		width: 50px;
 		margin-top: 8px;
 	}
 
@@ -376,6 +376,10 @@ li.user-progress {
 	.nav-stacked > li + li {
 	  margin-top: 0px;
 	  margin-left: 2px;
+	}
+
+	li.user-progress .progress-chart {
+		width: 25px;
 	}
 }
 
