--- a/frappe/public/less/navbar.less
+++ b/frappe/public/less/navbar.less
@@ -161,6 +161,7 @@
 }
 
 .navbar-form .awesomplete {
+	margin-left: -15px;
 	width: 300px;
 
 	@media (max-width: @screen-md) {
@@ -218,12 +219,13 @@
 
 #navbar-breadcrumbs > li > a {
 	padding: 6px 15px 10px 0px;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	white-space: nowrap;
+	max-width: 170px;
 
 	@media (min-width:991px) and (max-width: 1199px) {
-		max-width: 143px;
-		overflow: hidden;
-		text-overflow: ellipsis;
-		white-space: nowrap;
+		max-width: 120px;
 	}
 }
 
