[fix] cleanup style for blog listings

--- a/frappe/public/less/website.less
+++ b/frappe/public/less/website.less
@@ -695,3 +695,8 @@ li.footer-child-item {
 	margin: 15px 0px;
 	max-width: 100%;
 }
+
+.blog-list-item {
+	padding-top: 30px;
+	padding-bottom: 30px;
+}
