--- a/frappe/templates/includes/list/list.html
+++ b/frappe/templates/includes/list/list.html
@@ -1,5 +1,5 @@
 {% if sub_title %}
-<p class="lead">{{ sub_title }}</p>
+<h4 class="text-muted">{{ sub_title }}</h4>
 {% endif %}
 {% if not result -%}
     <div class="text-muted no-results" style="min-height: 300px;">
