--- a/frappe/public/css/website.css
+++ b/frappe/public/css/website.css
@@ -981,3 +981,7 @@ li.footer-child-item {
   margin: 15px 0px;
   max-width: 100%;
 }
+.blog-list-item {
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
