--- a/frappe/website/doctype/blog_post/templates/blog_post_row.html
+++ b/frappe/website/doctype/blog_post/templates/blog_post_row.html
@@ -2,22 +2,34 @@
 <div class="web-list-item blog-list-item">
 	<div class="row">
 		<div class="col-xs-12">
-			<h1 class="blog-header"><a href="/{{ post.route }}">{{ post.title }}</a></h1>
+			<h2><a href="/{{ post.route }}">{{ post.title }}</a></h2>
 			{% if post.cover_image %}
 			<p style="height: 200px; overflow: hidden;">
 				<img src="{{ post.cover_image }}" alt="{{post.title}} - Cover Image" style="width: 60%;"/>
 			</p>
 			{% endif %}
 			<p class="post-description">{{ post.intro }}</p>
-			<p class="post-by text-muted small">
-				<a href="/blog?blogger={{ post.blogger }}"
-					class="no-decoration">{{ _("By") }} {{ post.full_name }}</a>
-				<i class="spacer-dot"></i> {{ frappe.format_date(post.published_on) }}
-				<i class="spacer-dot"></i>
-				<a href="/blog?blog_category={{ post.blog_category }}"
-					class="no-decoration">{{ post.category.title }}</a>
-				<i class="spacer-dot"></i> {{ post.comment_text }}
-			</p>
+
+			<div style='margin-top: 15px;'>
+				<div class="inline-block" style="vertical-align: top">
+					<div class="avatar avatar-small">
+						<img itemprop="thumbnailUrl" src="{{ post.avatar or "/assets/frappe/images/default-avatar.png" }}" />
+					</div>
+				</div>
+				<div class="inline-block" style="width: calc(100% - 100px)">
+					<div class='text-muted'>
+						<a href="/blog?blogger={{ post.blogger }}">{{ post.full_name }}</a>
+					</div>
+					<div class="text-muted small">
+						{{ frappe.format_date(post.published_on) }}
+						{% if post.comments %}
+						<span style='display: inline-block; margin-left: 10px;'>
+						<i class='octicon octicon-comment-discussion'></i> {{ post.comments }}
+						</span>
+						{% endif %}
+					</div>
+				</div>
+			</div>
 		</div>
 	</div>
 </div>
