--- a/frappe/website/doctype/blog_post/templates/blog_post_row.html
+++ b/frappe/website/doctype/blog_post/templates/blog_post_row.html
@@ -5,14 +5,14 @@
 			<h2><a href="/{{ post.route }}">{{ post.title }}</a></h2>
 			{% if post.cover_image %}
 			<p style="height: 200px; overflow: hidden;">
-				<img src="{{ post.cover_image }}" alt="{{post.title}} - Cover Image" style="width: 60%;"/>
+				<img src="{{ post.cover_image }}" alt="{{post.title}} - Cover Image" style="width: 60%;"/ style='blog-cover-image'>
 			</p>
 			{% endif %}
 			<p class="post-description">{{ post.intro }}</p>
 
 			<div style='margin-top: 15px;'>
 				<div class="inline-block" style="vertical-align: top">
-					<div class="avatar avatar-small">
+					<div class="avatar">
 						<img itemprop="thumbnailUrl" src="{{ post.avatar or "/assets/frappe/images/default-avatar.png" }}" />
 					</div>
 				</div>
