[minor] fixed the margin on checkbox for rtl language

--- a/frappe/public/less/desk.less
+++ b/frappe/public/less/desk.less
@@ -475,7 +475,11 @@ li.user-progress {
 }
 
 .frappe-rtl input ,.frappe-rtl textarea {
-	direction: rtl
+	direction: rtl;
+}
+
+.frappe-rtl .checkbox .disp-area {
+	margin-right: -20px;
 }
 
 .text-editor {
