--- a/frappe/public/css/desk.css
+++ b/frappe/public/css/desk.css
@@ -621,6 +621,9 @@ li.user-progress .progress-bar {
 .frappe-rtl textarea {
   direction: rtl;
 }
+.frappe-rtl .checkbox .disp-area {
+  margin-right: -20px;
+}
 .text-editor {
   height: 400px;
   background-color: white;
