adds full screen toggle

--- a/frappe/public/less/navbar.less
+++ b/frappe/public/less/navbar.less
@@ -246,3 +246,17 @@
 .navbar-default .navbar-brand {
 	color: @text-muted;
 }
+.toggle-fullscreen:before{
+	font-family: FontAwesome;
+	font-weight: normal;
+	font-style: normal;
+  display: inline-block;
+	font-size: 18px;
+	position: relative;
+  content: "\f065";
+}
+.toggle-fullscreen.active:before{
+	font-size: 18px;
+	position: relative;
+  content: "\f066";
+}
