[Charts] renaming and namespacing

--- a/frappe/public/css/charts.css
+++ b/frappe/public/css/charts.css
@@ -38,11 +38,11 @@
 .chart-container .axis,
 .chart-container .chart-label {
   font-size: 10px;
-  fill: #959ba1;
+  fill: #555b51;
 }
 .chart-container .axis line,
 .chart-container .chart-label line {
-  stroke: rgba(27, 31, 35, 0.1);
+  stroke: rgba(27, 31, 35, 0.2);
 }
 .chart-container .percentage-graph .progress {
   margin-bottom: 0px;
