--- a/frappe/public/less/charts.less
+++ b/frappe/public/less/charts.less
@@ -1,6 +1,8 @@
 
 /* charts */
 .chart-container {
+	// font-family: Verdana, Geneva, Tahoma, sans-serif;
+
 	.graph-focus-margin {
 		margin: 0px 5%;
 	}
@@ -46,10 +48,10 @@
 
 	.axis, .chart-label {
 		font-size: 10px;
-		fill: #959ba1;
+		fill: #555b51;
 
 		line {
-			stroke: rgba(27,31,35,0.1);
+			stroke: rgba(27,31,35,0.2);
 		}
 	}
 
