Replace in grid report with plot, fixes

--- a/frappe/public/css/charts.css
+++ b/frappe/public/css/charts.css
@@ -138,6 +138,9 @@
 .stroke.light-green {
   stroke: #98d85b;
 }
+.stroke.lightgreen {
+  stroke: #98d85b;
+}
 .stroke.green {
   stroke: #28a745;
 }
@@ -172,6 +175,9 @@
   fill: #ff5858;
 }
 .fill.light-green {
+  fill: #98d85b;
+}
+.fill.lightgreen {
   fill: #98d85b;
 }
 .fill.green {
@@ -210,6 +216,9 @@
 .background.light-green {
   background: #98d85b;
 }
+.background.lightgreen {
+  background: #98d85b;
+}
 .background.green {
   background: #28a745;
 }
@@ -244,6 +253,9 @@
   border-top: 3px solid #ff5858;
 }
 .border-top.light-green {
+  border-top: 3px solid #98d85b;
+}
+.border-top.lightgreen {
   border-top: 3px solid #98d85b;
 }
 .border-top.green {
