--- a/frappe/public/less/charts.less
+++ b/frappe/public/less/charts.less
@@ -178,6 +178,9 @@
 .stroke.light-green {
 	stroke: #98d85b;
 }
+.stroke.lightgreen {
+	stroke: #98d85b;
+}
 .stroke.green {
 	stroke: #28a745;
 }
@@ -213,6 +216,9 @@
 	fill: #ff5858;
 }
 .fill.light-green {
+	fill: #98d85b;
+}
+.fill.lightgreen {
 	fill: #98d85b;
 }
 .fill.green {
@@ -252,6 +258,9 @@
 .background.light-green {
 	background: #98d85b;
 }
+.background.lightgreen {
+	background: #98d85b;
+}
 .background.green {
 	background: #28a745;
 }
@@ -287,6 +296,9 @@
 	border-top: 3px solid #ff5858;
 }
 .border-top.light-green {
+	border-top: 3px solid #98d85b;
+}
+.border-top.lightgreen {
 	border-top: 3px solid #98d85b;
 }
 .border-top.green {
