[fix] if no_socketio specified, upload file with FileReader

--- a/frappe/public/less/form.less
+++ b/frappe/public/less/form.less
@@ -762,6 +762,10 @@ select.form-control {
 	color: @text-muted;
 }
 
+.attach-btn {
+	margin-top: 10px;
+}
+
 // above mobile
 @media (min-width: 768px) {
 	.layout-main .form-column.col-sm-12 > form > .input-max-width {
