[hotfix] fixed margin for disabled check field

--- a/frappe/public/less/desk.less
+++ b/frappe/public/less/desk.less
@@ -484,6 +484,11 @@ li.user-progress {
 
 .frappe-rtl .checkbox .disp-area {
 	margin-right: -20px;
+	margin-left: 0px;
+}
+
+.checkbox .disp-area {
+	margin-left: -20px;
 }
 
 .text-editor {
