Add attach control styling to form.less

--- a/frappe/public/less/form.less
+++ b/frappe/public/less/form.less
@@ -913,4 +913,14 @@ body[data-route^="Form/Communication"] textarea[data-fieldname="subject"] {
 	height: 80px !important;
 }
 
+.frappe-control[data-fieldtype="Attach"] {
+	.attached-file {
+		position: relative;
 
+		.close {
+			position: absolute;
+			top: 0;
+			right: 0;
+		}
+	}
+}
