--- a/frappe/public/css/form.css
+++ b/frappe/public/css/form.css
@@ -718,3 +718,11 @@ select.form-control {
 body[data-route^="Form/Communication"] textarea[data-fieldname="subject"] {
   height: 80px !important;
 }
+.frappe-control[data-fieldtype="Attach"] .attached-file {
+  position: relative;
+}
+.frappe-control[data-fieldtype="Attach"] .attached-file .close {
+  position: absolute;
+  top: 0;
+  right: 0;
+}
