--- a/frappe/public/less/form.less
+++ b/frappe/public/less/form.less
@@ -916,6 +916,7 @@ body[data-route^="Form/Communication"] textarea[data-fieldname="subject"] {
 .frappe-control[data-fieldtype="Attach"] {
 	.attached-file {
 		position: relative;
+		margin-top: 5px;
 
 		.close {
 			position: absolute;
