--- a/frappe/templates/print_formats/standard_macros.html
+++ b/frappe/templates/print_formats/standard_macros.html
@@ -8,8 +8,8 @@
 	{%- elif df.fieldtype in ("Image", "Attach Image", "Attach", "Signature")
 		and (guess_mimetype(doc[df.fieldname])[0] or "").startswith("image/")  -%}
 		{{ render_image(df, doc) }}
-	{%- elif df.fieldtype=="Map" -%}
-		{{ render_map(df, doc) }}
+	{%- elif df.fieldtype=="Geolocation" -%}
+		{{ render_geolocation(df, doc) }}
 	{%- else -%}
 		{{ render_field_with_label(df, doc) }}
 	{%- endif -%}
@@ -100,7 +100,7 @@ data-fieldname="{{ df.fieldname }}" data-fieldtype="{{ df.fieldtype }}"
 	{{ print_value(df, doc) }}
 {% endmacro %}
 
-{%- macro render_map(df, doc) -%}
+{%- macro render_geolocation(df, doc) -%}
 	{{ "" }}
 {%- endmacro -%}
 
