Browse attached images in Image View #4141

--- a/frappe/public/css/list.css
+++ b/frappe/public/css/list.css
@@ -405,6 +405,22 @@
 .pswp__bg {
   background-color: #fff !important;
 }
+.pswp__more-items {
+  position: absolute;
+  bottom: 12px;
+  left: 50%;
+  transform: translateX(-50%);
+}
+.pswp__more-item {
+  display: inline-block;
+  margin: 5px;
+  height: 100px;
+  cursor: pointer;
+  border: 1px solid #d1d8dd;
+}
+.pswp__more-item img {
+  max-height: 100%;
+}
 .gantt .details-container .heading {
   margin-bottom: 10px;
   font-size: 12px;
