csslint allow important

--- a/frappe/public/js/lib/leaflet/leaflet.css
+++ b/frappe/public/js/lib/leaflet/leaflet.css
@@ -46,7 +46,7 @@
 .leaflet-container .leaflet-shadow-pane img,
 .leaflet-container .leaflet-tile-pane img,
 .leaflet-container img.leaflet-image-layer {
-	max-width: none !important;
+	max-width: none !important; /* csslint allow: important */
 	}
 
 .leaflet-container.leaflet-touch-zoom {
