Revert "[hotfix] setup complete state colors"

--- a/frappe/public/less/page.less
+++ b/frappe/public/less/page.less
@@ -335,6 +335,14 @@ select.input-sm {
 	}
 }
 
+.page-card-container, .setup-state {
+	background-color: #f5f7fa;
+}
+
+.page-container .page-card-container {
+	background-color: #fff;
+}
+
 .page-card-container {
 	padding: 70px;
 }
