--- a/frappe/public/less/desk.less
+++ b/frappe/public/less/desk.less
@@ -289,6 +289,12 @@ textarea.form-control {
 	margin-top: 5px;
 }
 
+.btn-primary.disabled {
+	background-color: #b1bdca;
+	color: #fff;
+	border-color: #b1bdca;
+}
+
 .form-control {
 	position: relative;
 
