Brand New UI with socket io room integration

--- a/frappe/public/css/desk-rtl.css
+++ b/frappe/public/css/desk-rtl.css
@@ -45,7 +45,7 @@
 .list-id {
   margin-left: 7px !important;
 }
-.avatar-small {
+.avatar-small .avatar-sm {
   margin-left: 5px;
   margin-right: auto;
 }
