--- a/frappe/public/less/chat.less
+++ b/frappe/public/less/chat.less
@@ -1,19 +1,9 @@
-.fc-ab-status {
-	margin-top: 15px;
-}
+.frappe-chat__app-bar-account 	{ margin-top: 15px; }
+.frappe-chat__app-bar-search  	{ margin-top: 15px; }
+.frappe-chat__app-bar-room-list { margin-top: 15px; }
+.frappe-chat__app-bar-search  	{ .dropdown-menu { min-width: 150px; } }
 
-.fc-ab-sb {
-	margin-top: 15px;
+.frappe-chat__room 				{ position: relative; margin-top: 15px; }
+.frappe-chat__form              { position: absolute; bottom: 0px; left: 0px; right: 0px; margin: 15px; }
 
-	.dropdown-menu {
-		min-width: 150px;
-	}
-}
-
-.fc-ab-rl {
-	margin-top: 15px;
-}
-
-.fc-cr {
-	margin-top: 15px;
-}
+// .avatar { margin-right: 15px; }
