--- a/frappe/public/css/chat.css
+++ b/frappe/public/css/chat.css
@@ -1,15 +1,23 @@
-.fc-ab-status {
+.frappe-chat__app-bar-account {
   margin-top: 15px;
 }
-.fc-ab-sb {
+.frappe-chat__app-bar-search {
   margin-top: 15px;
 }
-.fc-ab-sb .dropdown-menu {
+.frappe-chat__app-bar-room-list {
+  margin-top: 15px;
+}
+.frappe-chat__app-bar-search .dropdown-menu {
   min-width: 150px;
 }
-.fc-ab-rl {
+.frappe-chat__room {
+  position: relative;
   margin-top: 15px;
 }
-.fc-cr {
-  margin-top: 15px;
+.frappe-chat__form {
+  position: absolute;
+  bottom: 0px;
+  left: 0px;
+  right: 0px;
+  margin: 15px;
 }
