--- a/frappe/templates/includes/search_template.html
+++ b/frappe/templates/includes/search_template.html
@@ -1,4 +1,4 @@
-<h1>{{ title }}: "{{ query }}"</h1>
+<h1>{{ title }}</h1>
 
 {%- macro search_results_section(results, title, has_more) -%}
 	<div class='search-result col-sm-6'>
@@ -24,7 +24,7 @@
 	<input name='q' class='form-control' type='text'
 		style='max-width: 400px; display: inline-block; margin-right: 10px;'
 		value='{{ frappe.form_dict.q or ''}}'
-		{% if not frappe.form_dict.q%}placeholder="{{ _("Search...") }}"{% endif %}>
+		{% if not frappe.form_dict.q %}placeholder="{{ _("Search...") }}"{% endif %}>
 	<input type='submit'
 		class='btn btn-sm btn-primary btn-search' value="{{ _("Search") }}">
 	</form>
