--- a/frappe/public/less/controls.less
+++ b/frappe/public/less/controls.less
@@ -2,6 +2,7 @@
 @import "mixins.less";
 @import "common.less";
 @import "awesomplete.less";
+@import "datepicker.less";
 
 .unit-checkbox {
 	color: #36414c;
