--- a/frappe/website/doctype/web_form/templates/web_form.html
+++ b/frappe/website/doctype/web_form/templates/web_form.html
@@ -166,6 +166,26 @@
 
 </div>
 
+{% if show_attachments and not frappe.form_dict.new -%}
+<div class="attachments">
+	<h3>{{ _("Attachments") }}</h3>
+	{% for attachment in attachments %}
+	<div class="attachment">
+		<a class="no-decoration attachment-link" href="{{ attachment.file_url }}" target="blank">
+			<div class="row">
+				<div class="col-xs-9">
+					<span class="file-name">{{ attachment.file_name }}</span>
+				</div>
+				<div class="col-xs-3">
+					<span class="pull-right file-size">{{ attachment.file_size }}</span>
+				</div>
+			</div>
+		</a>
+	</div>
+	{% endfor %}
+</div>
+{%- endif %}
+
 {% if allow_comments and not frappe.form_dict.new -%}
 <div class="comments">
 	<br><br>
@@ -203,6 +223,12 @@ frappe.boot = {
 		date_format: "{{ frappe.get_system_settings('date_format') or 'yyyy-mm-dd' }}",
 	}
 };
+
+{% if show_attachments and not frappe.form_dict.new -%}
+$(".file-size").each(function() {
+	$(this).text(frappe.form.formatters.FileSize($(this).text()));
+});
+{%- endif %}
 
 // for backward compatibility of some libs
 frappe.sys_defaults = frappe.boot.sysdefaults;
