--- a/frappe/public/less/form.less
+++ b/frappe/public/less/form.less
@@ -608,6 +608,10 @@ h6.uppercase, .h6.uppercase {
 	}
 }
 
+.timeline-futur span{
+	color: @orange !important;
+}
+
 .signature-field {
 	min-height: 300px;
 	background: #fff;
