fix(ux): Reorder Print Server fields
- fix timeline overflow text

--- a/frappe/public/less/form.less
+++ b/frappe/public/less/form.less
@@ -386,6 +386,10 @@ h6.uppercase, .h6.uppercase {
 	}
 }
 
+.timeline-item .media-body {
+	max-width: 100%;
+}
+
 .timeline-item.user-content {
 	margin: 30px 0px 30px 27px;
 
