feat(Text Editor): Quill Editor

--- a/frappe/public/less/desk.less
+++ b/frappe/public/less/desk.less
@@ -1,6 +1,7 @@
 @import "variables.less";
 @import "mixins.less";
 @import "common.less";
+@import "quill.less";
 
 .nav-pills a, .nav-pills a:hover {
 	border-bottom: none;
