--- a/frappe/public/less/quill.less
+++ b/frappe/public/less/quill.less
@@ -3,5 +3,30 @@
 
 .ql-toolbar.ql-snow, .ql-container.ql-snow {
     border-color: @border-color;
-    font-family: initial;
+    font-family: inherit;
+}
+
+.ql-toolbar.ql-snow {
+    border-top-left-radius: 4px;
+    border-top-right-radius: 4px;
+    background-color: @panel-bg;
+    padding-bottom: 0;
+}
+
+.ql-container.ql-snow {
+    border-bottom-left-radius: 4px;
+    border-bottom-right-radius: 4px;
+}
+
+.ql-editor {
+    min-height: 400px;
+    max-height: 600px;
+}
+
+.ql-snow .ql-picker-label {
+    outline: none;
+}
+
+.ql-formats {
+    margin-bottom: 8px;
 }
