--- a/frappe/public/less/quill.less
+++ b/frappe/public/less/quill.less
@@ -1,5 +1,6 @@
 @import "variables.less";
 @import (less) "quill/dist/quill.snow.css";
+@import (less) "quill/dist/quill.bubble.css";
 
 .ql-toolbar.ql-snow, .ql-container.ql-snow {
     border-color: @border-color;
@@ -18,7 +19,7 @@
     border-bottom-right-radius: 4px;
 }
 
-.ql-editor {
+.ql-snow .ql-editor {
     min-height: 400px;
     max-height: 600px;
 }
@@ -29,4 +30,11 @@
 
 .ql-formats {
     margin-bottom: 8px;
+}
+
+.ql-bubble .ql-editor {
+    min-height: 100px;
+    max-height: 300px;
+    border: 1px solid @light-border-color;
+    border-radius: 4px;
 }
