Add HTML editor

--- a/frappe/public/less/controls.less
+++ b/frappe/public/less/controls.less
@@ -44,3 +44,15 @@
 	z-index: 3;
 }
 
+.html-preview-container {
+	.html-preview-label {
+		.text-muted;
+		margin: 10px 0;
+		font-size: @text-medium
+	}
+	.html-preview-area {
+		.border;
+		padding: 5px;
+		margin-bottom: 10px;
+	}
+}
