fix: Show filter row always

--- a/frappe/public/less/frappe-datatable.less
+++ b/frappe/public/less/frappe-datatable.less
@@ -54,6 +54,10 @@ table td.dt-cell {
 	--dt-header-cell-bg: @panel-bg;
 	--dt-cell-bg: @panel-bg;
 	--dt-text-color: @text-muted;
+
+	.dt-row[data-is-filter] {
+		display: flex !important;
+	}
 }
 
 .dt-row.row-update {
