Add banner Image

--- a/frappe/public/less/social.less
+++ b/frappe/public/less/social.less
@@ -124,3 +124,9 @@ body[data-route*="social"] {
 		font-weight: 600;
 	}
 }
+
+body[data-route*="social/profile"] {
+	.page-head {
+		display: none;
+	}
+}
