--- a/frappe/templates/pages/integrations/payment-success.html
+++ b/frappe/templates/pages/integrations/payment-success.html
@@ -15,4 +15,13 @@
 <style>
 {% include "templates/styles/card_style.css" %}
 </style>
+<script>
+	frappe.ready(function() {
+		if('{{ frappe.form_dict.redirect_to or "" }}'){
+			setTimeout(function(){
+				window.location.href = '{{ frappe.form_dict.redirect_to }}';
+			}, 6000);
+		}
+	})
+</script>
 {% endblock %}
