--- a/frappe/public/less/social.less
+++ b/frappe/public/less/social.less
@@ -20,11 +20,12 @@ body[data-route*="social"] {
 			flex: 20%
 		}
 		.post-container {
-			padding-top: 10px;
-			display: flex;
-			flex-direction: column;
 			width: 500px;
+			display: flex;
 			margin: 0 20px;
+			margin-top: 20px;
+			padding-top: 10px;
+			flex-direction: column;
 			.new_posts_count {
 				cursor: pointer;
 				text-align: center;
