--- a/frappe/public/less/social.less
+++ b/frappe/public/less/social.less
@@ -68,7 +68,7 @@ body[data-route*="social"] {
 			img, iframe {
 				border-radius: 5px;
 				border: none;
-				margin-bottom: 5px;
+				margin: 5px 0;
 			}
 			img {
 				&:hover {
